[package]
name = "city_grow_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
derive_builder = "0.20.2"
rand = "0.10.0"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
windows-numerics = "0.3.1"

[dependencies.windows]
version = "0.62.2"
features = [
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
]
